<resources>
    <string name="app_name">EGE trainer</string>
    <string name="appInName">Name</string>
    <string name="appNameAuthor">Author</string>
    <string name="textBotton">Enter</string>
    <string name="buttonSignIn">Enter</string>
    <string name="buttonRegister">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>