<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anaheim"
            android:text="@string/appInName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/anaheim"
            android:text="@string/appNameAuthor"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textBotton"
        android:layout_alignParentBottom="true"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/textBotton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@+id/textBotton"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/botton_sign_in"
            android:fontFamily="@font/anaheim"
            android:text="@string/buttonSignIn"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/botton_sign_in"
            android:fontFamily="@font/anaheim"
            android:text="@string/buttonRegister"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>
