<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingClass"

    app:cardElevation="10dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="text"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHighlight="@color/teal_700"
            android:textSize="20sp"></EditText>

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:inputType="text"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHighlight="@color/teal_700"
            android:textSize="20sp"></EditText>

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHighlight="@color/teal_700"
            android:textSize="20sp"></EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHighlight="@color/teal_700"
            android:textSize="20sp"></EditText>

    </LinearLayout>

</androidx.cardview.widget.CardView>